# demo-game

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  gen-image.py  pyproject.toml
.github/workflows/: ci.yml
client/: index.html  package-lock.json  package.json  vite.config.js  vitest.config.js
client/coverage/: clover.xml  coverage-final.json  index.html
client/coverage/helpers/: clipboard.js.html  format.js.html  geometry.js.html  health.js.html  index.html  interpolate.js.html  mcp.js.html  store.js.html  world.js.html
client/coverage/net/: GameSocket.js.html  index.html
client/public/: site.webmanifest
client/src/: constants.js  main.js  style.css
client/src/game/: Clouds.js  DamageNumbers.js  DebugOverlay.js  EntityView.js  Music.js
client/src/helpers/: animations.js  clipboard.js  format.js  geometry.js  health.js  interpolate.js  mcp.js  store.js  world.js
client/src/net/: GameSocket.js
client/src/ui/: Button.js  (+10 more)
client/tests/: clipboard.test.js  lib.test.js  net.test.js
docs/: app.md  maps.md
src/app/: attributes.py  catalog.py  classes.py  colors.py  config.py  errors.py  fsm.py  game.py  gateway.py  items.py  main.py  objects.py  provider.py  room.py  room_manager.py  session.py  stream.py  tools.py  weapons.py  world.py
tests/: conftest.py  test_attributes_items_weapons.py  test_catalog.py  test_entrypoint.py  test_fsm.py  test_game.py  test_gateway.py  test_geometry.py  test_maps.py  test_misc.py  test_npc_behaviors.py  test_rooms.py  test_tools.py  test_world.py  test_world_branches.py  test_world_coverage.py
(+22 files in other folders)
